imporve carrousel code + animation when user click button - fix carrousel display on mobile screen - last carrousel, we use absolute position for all card, it's cause big issue with card height, so i give a fix height size (bad idea)

--- a/public/assets/css/front/homePage/homePage.scss
+++ b/public/assets/css/front/homePage/homePage.scss
@@ -7,13 +7,13 @@
 main {
 
     .main_container {
-        
+
         display: flex;
         justify-content: center;
         flex-direction: column;
         gap: 3rem;
         z-index: 0;
-        
+
         .titles_container {
             margin: auto;
         }
@@ -23,9 +23,9 @@ main {
             font-weight: bold;
             text-align: center;
         }
-        
-        .cards_container_list{
-            display: flex!important;
+
+        .cards_container_list {
+            display: flex !important;
         }
 
         .page_subTitle {
@@ -35,7 +35,7 @@ main {
 
         .cards {
             position: relative;
-            --padding: 1.5rem;
+            --padding: 1.5rem 0;
             padding: var(--padding);
             background-color: var(--secondary-color);
             border-radius: 0.5rem;
@@ -60,27 +60,30 @@ main {
 
             .cards_carrousel_container {
                 overflow: hidden;
-                height: 405px;
+                //height: 405px;
 
                 .cards_carrousel {
                     position: relative;
                     display: flex;
                     //width: calc(100%);
                     height: 100%;
-                    gap: calc(1rem);
+                    //gap: calc(1rem);
+
+                    transition: transform 0.35s ease-out;
 
                     .cards_container {
                         display: flex;
-                        opacity: 0;
+                        padding-inline: 1.5rem;
+                        //opacity: 0;
                         --margin-top: 1rem;
                         flex-wrap: wrap;
                         z-index: 10;
-                        width: 100%;
+                        min-width: 100%;
                         height: 100%;
-                        position: absolute;
+                        //position: absolute;
                         background-color: var(--secondary-color);
 
-                        transition: 0.2s;
+                        //transition: 0.2s;
 
                         &.card_selected {
                             transition: 0.2s;
@@ -94,6 +97,13 @@ main {
                             aspect-ratio: 16/9;
                             object-fit: cover;
                             box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+
+                            filter: brightness(0.9);
+                            transition: filter 0.3s ease-out;
+
+                            &:hover {
+                                filter: initial;
+                            }
                         }
 
                         .cards_content {
@@ -217,36 +227,36 @@ a.tcb_btn_caroussel_right {
 
     main {
 
-        .cards {
+        .main_container {
+            .cards {
+                .cards_carrousel_container {
 
+                    .cards_carrousel {
 
-            .cards_container {
-                flex-direction: column;
+                        .cards_container {
+                            flex-direction: column;
 
-                img {
-                    width: 100%;
-                }
+                            img {
+                                width: 100%;
+                                aspect-ratio: 16/8;
+                            }
 
-                .cards_content {
-                    width: 100%;
-                    padding: 1rem;
+                            .cards_content {
+                                width: 100%;
+                                padding: 1rem;
 
-                    .card_btn {}
+                                .card_btn {}
+                            }
+                        }
+                    }
                 }
             }
+
+
+
+
         }
     }
 
 
 }
-
-
-
-
-
-
-
-
-
-
-
